Action3 change print working.